
syntax = "proto3";

option go_package="./proto";

package User;

service User {
  rpc UserReg (UserRegRequest) returns (UserRegResponse);
}

message UserRegResponse {
  int32 Id = 1;
  int32 Age = 2;
}

message UserRegRequest {
  string Nickname = 1;
  int32 Sex = 2;
  int32 Age = 3;
}